--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+#数据库类型为innoDB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #thymelea start
 spring.thymeleaf.mode=LEGACYHTML5
