--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=root
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #数据库类型为innoDB
 spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
 
