--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #post
-server.port=8080
+server.port=8088
 
 #management
 management.server.port=8089
@@ -8,7 +8,7 @@ management.server.port=8089
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/program?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mysql123
 
 #JPA
 spring.jpa.database=mysql
