--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
+        <!-- spring-boot-devtools热启动依赖包 start-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+            <scope>true</scope>
+        </dependency>
+        <!-- spring-boot-devtools热启动依赖包 end-->
     </dependencies>
 
     <build>
