优化上传图片的样式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 #thymeleaf end
+
+#热部署生效
+spring.devtools.restart.enabled: true
+#设置重启的目录
+spring.devtools.restart.additional-paths: resources/**,static/**,templates/**
+#classpath目录下的WEB-INF文件夹内容修改不重启
+#spring.devtools.restart.exclude: WEB-INF/**
